--- a/index.html
+++ b/index.html
@@ -25,25 +25,6 @@
 
 <body>
 <div id="layout-wrapper">
-  <div class="contact-mobile-menu js-menu">
-    <a class="menu-close js-menu-close" href="#">
-      <span class="burger"></span>
-    </a>
-    <div class="wrapper">
-      <p class="contact-mobile-menu__desc">Нажмите на номер телефона, <br>чтобы позвонить:</p>
-      <div class="contact-mobile-menu__block">
-        <img src="assets/img/tel.png" alt="Телефоны">
-        <p class="contact-mobile-menu__title">Саратов</p>
-        <p class="contact-mobile-menu__number"><span>+7(8452)</span> 29-40-90</p>
-        <p class="contact-mobile-menu__number"><span>+7(8452)</span> 20-56-93</p>
-      </div>
-      <div class="contact-mobile-menu__block">
-        <img src="assets/img/tel.png" alt="Телефоны">
-        <p class="contact-mobile-menu__title">Волгоград</p>
-        <p class="contact-mobile-menu__number"><span>+7(8442)</span> 55-11-93</p>
-      </div>
-    </div>
-  </div>
   <header>
     <div class="wrapper">
       <h1 class="description">Поставка профессиональных клеев промышленным предприятиям</h1>
@@ -286,16 +267,18 @@
         </a>
       </div>
     </div>
-    <p>&nbsp;. ООО &quot;БИЭС&quot; является официальным дистрибьютером фирмы &quot;ХЕНКЕЛЬ&quot;&nbsp; (Германия) по
-      направлениям промышленных клеев для деревообработки, упаковки и этикитирования, поставляет клеи и дисперсии ПВА
-      различных модификаций отечественных производителей, &nbsp;В 2015 году мы подписали дилерское соглашение с
-      крупнейшим Российским производиелем крепежной скобы - фирмой &quot;ФОРЕСТ&quot; (марка &quot;ПРЕБЕНА&quot;), В
-      2016 году подписано дилерское соглашение с крупнешим производителем герметиков, клеев и монтажнх пен - фирмой
-      &quot;SOUDAL&quot; (Бельгия).&nbsp;&nbsp;На сегодняшний день мы&nbsp;поставляем большой ассортимент клеев для
-      деревообработки, кромкоооблицовки, поролона, вакуумного прессованич упаковки и т д в &nbsp;десятки предприятий
-      &nbsp;Саратовской &nbsp;области и других регионов, Оюращаем внимание, что перечень продукции на сайте может быть
-      не полным. Обращайтесь к нашим менеджерам и мы сможем подобрать клей для Вашего производства и проконсультируем по
-      вопросам его применения.</p>
+    <div class="company-desc-wrappper">
+      <p>ООО &quot;БИЭС&quot; является официальным дистрибьютером фирмы &quot;ХЕНКЕЛЬ&quot;&nbsp; (Германия) по
+        направлениям промышленных клеев для деревообработки, упаковки и этикитирования, поставляет клеи и дисперсии ПВА
+        различных модификаций отечественных производителей, &nbsp;В 2015 году мы подписали дилерское соглашение с
+        крупнейшим Российским производиелем крепежной скобы - фирмой &quot;ФОРЕСТ&quot; (марка &quot;ПРЕБЕНА&quot;), В
+        2016 году подписано дилерское соглашение с крупнешим производителем герметиков, клеев и монтажнх пен - фирмой
+        &quot;SOUDAL&quot; (Бельгия).&nbsp;&nbsp;На сегодняшний день мы&nbsp;поставляем большой ассортимент клеев для
+        деревообработки, кромкоооблицовки, поролона, вакуумного прессованич упаковки и т д в &nbsp;десятки предприятий
+        &nbsp;Саратовской &nbsp;области и других регионов, Оюращаем внимание, что перечень продукции на сайте может быть
+        не полным. Обращайтесь к нашим менеджерам и мы сможем подобрать клей для Вашего производства и проконсультируем по
+        вопросам его применения.</p>
+    </div>
 
     <div class="features">
       <div class="feature">
@@ -379,6 +362,29 @@
       </div>
     </div>
   </footer>
+
+  <!-- BEGIN contact-mobile-menu -->
+  <div class="contact-mobile-menu js-contact-mobile-menu">
+    <a class="menu-close js-menu-close" href="#">
+      <span class="burger"></span>
+    </a>
+    <div class="wrapper">
+      <p class="contact-mobile-menu__desc">Нажмите на номер телефона, <br>чтобы позвонить:</p>
+      <div class="contact-mobile-menu__block">
+        <img src="assets/img/tel.png" alt="Телефоны">
+        <p class="contact-mobile-menu__title">Саратов</p>
+        <p class="contact-mobile-menu__number"><a href="tel:+78452294090">+7(8452) 29-40-90</a></p>
+        <p class="contact-mobile-menu__number"><a href="tel:+78452205693">+7(8452) 20-56-93</a></p>
+      </div>
+      <div class="contact-mobile-menu__block">
+        <img src="assets/img/tel.png" alt="Телефоны">
+        <p class="contact-mobile-menu__title">Волгоград</p>
+        <p class="contact-mobile-menu__number"><a href="tel:+78442551193">+7(8452) 55-11-93</a></p>
+      </div>
+    </div>
+  </div>
+  <!-- END contact-mobile-menu -->
+
 </div>
 <script src="assets/js/vendor.js"></script>
 <script src="assets/js/main.js"></script>
